# codespace-test

./: .env.production  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/: README.md  manage.py  pyproject.toml
backend/bank_parser/: admin.py  apps.py  models.py  tests.py  views.py
backend/bank_parser/migrations/: 0001_initial.py
backend/bank_parser/parsers/: base_parser.py  chase_parser.py
backend/bank_parser/parsers/chase/: test_chase_parser.py
backend/bank_parser/utils/: file_handlers.py
backend/bank_parser_old/: view.py
backend/financial_insights/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md
infrastructure/: README.md
old_files/: Dockerfile  file_utils.py  main.py  md_to_pdf.py
src/: main.py
src/parsers/: csv_parser.py  excel_parser.py  pdf_parser.py
src/utils/: file_utils.py
tests/: test_csv_parser.py  test_excel_parser.py  test_file_utils.py  test_pdf_parser.py
