[tool.poetry]
name = "bank_statement_parser"
version = "0.1.0"
description = "A tool for parsing bank and credit card statements from CSV, Excel, and PDF files."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["bank statements", "parsing", "CSV", "Excel", "PDF"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/yourusername/bank_statement_parser"
repository = "https://github.com/yourusername/bank_statement_parser"
documentation = "https://github.com/yourusername/bank_statement_parser/wiki"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
tabula-py = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
