[tool.poetry]
name = "bank-statement-backend"
version = "0.1.0"
packages = [
    { include = "financial_insights" },
    { include = "bank_parser" }
]
description = "Bank statement parsing backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
djangorestframework = "^3.14"
pandas = "^2.0"
PyPDF2 = "^3.0"
python-dateutil = "^2.8"
celery = { version = "^5.3", optional = true }
psycopg = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
